--- a/app/src/main/res/layout/activity_restaurants.xml
+++ b/app/src/main/res/layout/activity_restaurants.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
     android:paddingTop="16dp"
-    tools:context="com.innovach.myrestaurants.ui.RestaurantsActivity">
+    tools:context="com.innovach.myrestaurants.ui.RestaurantListActivity">
 
     <TextView
         android:layout_width="wrap_content"
